--- a/HTML/Launchy_manual.html
+++ b/HTML/Launchy_manual.html
@@ -50,20 +50,9 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <p>Launchy comes with reasonable defaults specified in the INI file. Normally their will be no need to make amendments to this INI file.</p>
 <p>The INI file is installed in <code>%localappdata%'),'\Launchy</code>, meaning that it can be changed even without admin rights. On a standard Windows installation this would be <code>%USERPROFILE%\AppData\Local\Launchy</code></p>
 <p>For a programmer it will be self explanatory what the INI file entries are all about, with the noticeable exception of the [WS_CHECK] section. It is not recommended to delete or change that section.</p>
-<p>In addition to the general INI file one can also specify an INI file named <code>Launchy_{machineName}.ini</code> which will only be instantiated on machines with matching names. This allows one to specify machine dependent INI entries, “CONFIG:wssize”, “CONFIG:workdir”, “CONFIG:CommandLine” and “FONT:Size” being the most obvious candidates.</p>
+<p>In addition to the general INI file one can also specify an INI file named <code>Launchy_{machineName}.ini</code> which will only be instantiated on machines with matching names. This allows one to specify machine dependent INI entries, “CONFIG:wssize”, “CONFIG:CommandLine” and “FONT:Size” being the most obvious candidates.</p>
 <p>“CONFIG:CommandLine” is nested and allows you to specify command line parameters that you want to use permanently. An example is the <code>DYALOGSTARTUPSE</code> parameter that can be used to tell Dyalog APL to permanently load stuff (particularly <code>Link</code>) from a non-standard folder.</p>
-<div class="h_tag">
-<a href="#Notes" id="Notes" class="autoheader_anchor">
-<h2 data-id="Notes">Notes</h2>
-</a>
-</div>
-<ul>
-<li>“workdir” is the directory which will become the current (or working) directory for any instance of Dyalog APL launched by Launchy.
-<p>If the INI entry does not exist or is empty or the specified directory does not exists then there will be no menu entry “Explore &gt; WorkDir”</p></li>
-</ul>
-<ul>
-<li>In case Launchy itself was launched with admin rights (by selecting “Run as administrator” from the context menu associated with Launchy exe for example) “(elevated)” will be shown in the caption of Launchy's GUI.</li>
-</ul>
+<p>Note that in case Launchy itself was launched with admin rights (by selecting “Run as administrator once” from the context menu associated with the Launchy EXE for example) “(elevated)” will be shown in the caption of Launchy's GUI.</p>
 <div class="h_tag">
 <a href="#How-to-update" id="How-to-update" class="autoheader_anchor">
 <h2 data-id="How-to-update">How to update</h2>
