--- a/HTML/ReleaseNotes.html
+++ b/HTML/ReleaseNotes.html
@@ -19,6 +19,15 @@ html{-webkit-text-size-adjust:100%;}body{margin:0;}main{display:block;}h1{margin
 </a>
 </div>
 <div class="h_tag">
+<a href="#790-from-2024-02-25" id="790-from-2024-02-25" class="autoheader_anchor">
+<h2 data-id="790-from-2024-02-25">7.9.0 from 2024-02-25</h2>
+</a>
+</div>
+<ul>
+<li>Editing the .NET-related JSON files in the installation directory of Dyalog now results in one rather than two requests for Admin rights, and offers one window with two tabs rather than two Windows.</li>
+<li>Tips and Hints improved.</li>
+</ul>
+<div class="h_tag">
 <a href="#780-from-2024-01-08" id="780-from-2024-01-08" class="autoheader_anchor">
 <h2 data-id="780-from-2024-01-08">7.8.0 from 2024-01-08</h2>
 </a>
